--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
+    "start": "node index.js",
     "seed": "node seed/seedData.js"
   },
   "dependencies": {
@@ -12,5 +13,9 @@
     "express": "^5.1.0",
     "faker": "^5.5.3",
     "mongoose": "^7.8.7"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
